[package]
name = "protex"
version = "0.1.1"
edition = "2021"
authors = ["ElectroMutex"]
description = "ProTex (Process Mutex) concurrency in process level"
license = "MIT"
documentation = "https://docs.rs/protex/latest/protex/"
homepage = "https://github.com/SkillfulElectro/protex.git"
repository = "https://github.com/SkillfulElectro/protex.git"
readme = "README.md"
keywords = ["cross-platform" , "parallel" , "fast" , "concurrency" , "thread"]
categories = ["concurrency"]

include = [
    "src/lib.rs",
    "src/linux_bsd_mac.rs",
    "src/android_ios.rs",
    "src/windows.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
libc = "0.2.158"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

